--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -119,7 +120,6 @@
                     <h3>Send a Message</h3>
                     <form id="contactForm" name="contact" netlify netlify-honeypot="bot-field" method="POST">
                         <input type="hidden" name="form-name" value="contact">
-                        <input type="hidden" name="_to" value="joshuamwila2004@gmail.com">
                         <p style="display: none;">
                             <label>Don't fill this out if you're human: <input name="bot-field" /></label>
                         </p>
