--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p class="hero-subtitle">A passionate creative with a love for design, music, and capturing life through visuals.</p>
                     <div class="hero-buttons">
                         <a href="#portfolio" class="btn btn-primary">View My Work</a>
-                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                        <a href="#contact" class="btn btn-secondary button">Get In Touch</a>
                     </div>
                 </div>
                 <div class="hero-image">
